	PR binutils/10654 	* dwarf2.c (lookup_address_in_line_info_table): Remove workaround 	for invalid location lists generated by gcc-2.95 and Intel 6.0 C++. 	Remove "function" parm, adjust caller.